--- a/quarkus-1.10/pom.xml
+++ b/quarkus-1.10/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>quarkus-1.5</artifactId>
+    <artifactId>quarkus-1.10</artifactId>
     <packaging>pom</packaging>
 
     <name>${project.groupId}.${project.artifactId}</name>
@@ -17,7 +17,7 @@
 
     <properties>
         <!-- latest Quarkus version -->
-        <quarkus.version>1.5.2.Final</quarkus.version>
+        <quarkus.version>1.10.5.Final</quarkus.version>
 
         <!-- Java EE modules that were removed from Java SE after Java 8 -->
         <!-- (see http://openjdk.java.net/jeps/320) -->
@@ -49,46 +49,52 @@
         <mp.reactive-messaging.version>1.0</mp.reactive-messaging.version>
         <mp.reactive-streams-operators.version>1.0.1</mp.reactive-streams-operators.version>
         <mp.rest-client.version>1.4.1</mp.rest-client.version>
-        <smallrye.config.version>1.7.0</smallrye.config.version>
-        <smallrye.context-propagation.version>1.0.13</smallrye.context-propagation.version>
-        <smallrye.fault-tolerance.version>4.2.0</smallrye.fault-tolerance.version>
-        <smallrye.graphql.version>1.0.3</smallrye.graphql.version>
-        <smallrye.health.version>2.2.1</smallrye.health.version>
-        <smallrye.jwt.version>2.1.2</smallrye.jwt.version>
-        <smallrye.metrics.version>2.4.2</smallrye.metrics.version>
-        <smallrye.openapi.version>1.2.4</smallrye.openapi.version>
+        <smallrye.common.version>1.4.1</smallrye.common.version>
+        <smallrye.config.version>1.9.3</smallrye.config.version>
+        <smallrye.context-propagation.version>1.0.19</smallrye.context-propagation.version>
+        <smallrye.fault-tolerance.version>4.3.2</smallrye.fault-tolerance.version>
+        <smallrye.graphql.version>1.0.20</smallrye.graphql.version>
+        <smallrye.health.version>2.2.5</smallrye.health.version>
+        <smallrye.jwt.version>2.3.1</smallrye.jwt.version>
+        <smallrye.metrics.version>2.4.4</smallrye.metrics.version>
+        <smallrye.openapi.version>2.0.16</smallrye.openapi.version>
         <smallrye.opentracing.version>1.3.4</smallrye.opentracing.version>
-        <smallrye.reactive-converter-api.version>1.0.12</smallrye.reactive-converter-api.version>
-        <smallrye.reactive-messaging.version>2.0.3</smallrye.reactive-messaging.version>
-        <smallrye.reactive-streams-operators.version>1.0.12</smallrye.reactive-streams-operators.version>
+        <smallrye.reactive-converter-api.version>1.2.2</smallrye.reactive-converter-api.version>
+        <smallrye.reactive-messaging.version>2.5.0</smallrye.reactive-messaging.version>
+        <smallrye.reactive-streams-operators.version>1.0.13</smallrye.reactive-streams-operators.version>
         <!-- quarkus is using resteasy-client-microprofile instead of smallrye-rest-client -->
 
         <!-- opentracing tracer implementation -->
         <io.opentracing.version>0.31.0</io.opentracing.version>
         <io.opentracing.contrib-jaxrs.version>0.4.1</io.opentracing.contrib-jaxrs.version>
-        <io.jaegertracing.version>0.34.0</io.jaegertracing.version>
+        <io.jaegertracing.version>0.34.3</io.jaegertracing.version>
 
-        <!-- Artifact versions provided by Quarkus 1.5.x -->
-        <resteasy.version>4.5.3.Final</resteasy.version>
-        <apache.httpclient.version>4.5.12</apache.httpclient.version>
+        <!-- Artifact versions provided by Quarkus 1.9.x -->
+        <resteasy.version>4.5.8.Final</resteasy.version>
+        <apache.httpclient.version>4.5.13</apache.httpclient.version>
         <jakarta.json.version>1.1.6</jakarta.json.version>
         <glassfish.jakarta.json.version>1.1.6</glassfish.jakarta.json.version>
         <jakarta.json.bind.version>1.0.2</jakarta.json.bind.version>
-        <yasson.version>1.0.7</yasson.version>
+        <yasson.version>1.0.8</yasson.version>
 
         <!-- note that for new projects you should consider using JSON-B (yasson) instead of Jackson -->
-        <jackson-2-version>2.10.4</jackson-2-version>
-        <jackson-bom.version>2.10.4</jackson-bom.version>
+        <jackson-2-version>2.11.3</jackson-2-version>
+        <jackson-bom.version>2.11.3</jackson-bom.version>
 
-        <infinispan.version>10.1.5.Final</infinispan.version>
-        <hibernate.version>5.4.16.Final</hibernate.version>
+        <infinispan.version>11.0.4.Final</infinispan.version>
+        <hibernate.version>5.4.26.Final</hibernate.version>
 
         <!-- Hibernate 6.0.1.Final is the reference implementation for Bean Validation 2.0 (EE8) -->
         <jakarta.validation.version>2.0.2</jakarta.validation.version>
-        <hibernate.validator.version>6.1.5.Final</hibernate.validator.version>
+        <hibernate.validator.version>6.1.6.Final</hibernate.validator.version>
 
         <!-- Quarkus x.y uses Quarkus ARC x.y (based on CDI 2.0) -->
         <jakarta.inject.version>1.0</jakarta.inject.version>
+
+        <!-- we encountered IllegalArgumentException: Unsupported api in ASM code when -->
+        <!-- ASM/Byte-Buddy versions didn't match -->
+        <asm.version>9.0</asm.version>
+        <byte-buddy.version>1.10.19</byte-buddy.version>
     </properties>
 
     <dependencyManagement>
@@ -239,6 +245,11 @@
                     <version>${mp.rest-client.version}</version>
                 </dependency>
                 <dependency>
+                    <groupId>io.smallrye.common</groupId>
+                    <artifactId>smallrye-common-annotation</artifactId>
+                    <version>${smallrye.common.version}</version>
+                </dependency>
+                <dependency>
                     <groupId>io.smallrye.config</groupId>
                     <artifactId>smallrye-config</artifactId>
                     <version>${smallrye.config.version}</version>
@@ -266,6 +277,10 @@
                     <version>${smallrye.fault-tolerance.version}</version>
                     <exclusions>
                         <exclusion>
+                            <groupId>org.eclipse.microprofile.fault-tolerance</groupId>
+                            <artifactId>microprofile-fault-tolerance-api</artifactId>
+                        </exclusion>
+                        <exclusion>
                             <groupId>org.jboss.logging</groupId>
                             <artifactId>jboss-logging</artifactId>
                         </exclusion>
@@ -277,8 +292,8 @@
                     <version>${smallrye.graphql.version}</version>
                     <exclusions>
                         <exclusion>
-                            <groupId>org.osgi</groupId>
-                            <artifactId>org.osgi.annotation.versioning</artifactId>
+                            <groupId>org.eclipse.microprofile.graphql</groupId>
+                            <artifactId>microprofile-graphql-api</artifactId>
                         </exclusion>
                     </exclusions>
                 </dependency>
@@ -329,7 +344,7 @@
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
-                    <artifactId>smallrye-open-api</artifactId>
+                    <artifactId>smallrye-open-api-core</artifactId>
                     <version>${smallrye.openapi.version}</version>
                     <exclusions>
                         <exclusion>
@@ -382,6 +397,12 @@
                     <groupId>io.smallrye.reactive</groupId>
                     <artifactId>smallrye-reactive-messaging-provider</artifactId>
                     <version>${smallrye.reactive-messaging.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>org.jboss.logging</groupId>
+                            <artifactId>jboss-logging</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye.reactive</groupId>
@@ -517,6 +538,34 @@
                     <groupId>javax.jws</groupId>
                     <artifactId>jsr181-api</artifactId>
                     <version>${javax.jws.version}</version>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>quarkus-build-tree</id>
+            <!-- have a dependency entry for some quarkus extensions -->
+            <!-- to know see some dependency version not noted in the quarkus-bom -->
+            <!-- copy them in a quarkus project and use with quarkus-bootstrap:build-tree -->
+            <dependencies>
+                <dependency>
+                    <!-- to know jackson-version, apache.httpclient.version -->
+                    <groupId>io.quarkus</groupId>
+                    <artifactId>quarkus-rest-client-jackson</artifactId>
+                </dependency>
+                <dependency>
+                    <!-- to know infinispan-version, glassfish.jakarta.json.version -->
+                    <groupId>io.quarkus</groupId>
+                    <artifactId>quarkus-infinispan-client</artifactId>
+                </dependency>
+                <dependency>
+                    <!-- to know hibernate-version -->
+                    <groupId>io.quarkus</groupId>
+                    <artifactId>quarkus-hibernate-orm</artifactId>
+                </dependency>
+                <dependency>
+                    <!-- to know jakarta.validation.version and hibernate.validator.version -->
+                    <groupId>io.quarkus</groupId>
+                    <artifactId>quarkus-hibernate-validator</artifactId>
                 </dependency>
             </dependencies>
         </profile>
